# OOP-teachique

./: CMakeLists.txt  README.md  report.md  run.sh
src/: main.cpp
src/menu/: Menu.cpp  Menu.h
src/technique/: AnyTechnique.h  ConceptsTechnique.h  CoroutinesTechnique.h  DeducingThisTechnique.h  ExpectedTechnique.h  FilesystemTechnique.h  FoldExprTechnique.h  FormatTechnique.h  IfConstexpr.cpp  IfConstexpr.h  InlineVarTechnique.h  OptionalTechnique.h  PrintTechnique.h  RangesTechnique.h  SharedMutexTechnique.h  SpaceshipTechnique.h  SpanTechnique.h  StringViewTechnique.h  StructuredBindings.cpp  StructuredBindings.h  TechniqueFactory.cpp  TechniqueFactory.h  VariantTechnique.h  techniques.json
src/technique/Header/: ITechnique.h  Menu.h  Technique.h  TechniqueManager.h
src/technique/Impl/: Menu.cpp  Technique.cpp  TechniqueManager.cpp
src/utils/: InputHelper.cpp  InputHelper.h
